--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# ----------------------------------- PROJET ----------------------------------
+
+build/
+release/
+debug/
+bin/
+
+# ------------------------------------ CPP ------------------------------------
+
 # Prerequisites
 *.d
 
