Correctif cmake télécharger GLM si non disponible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ set(SRCS
 )
 set(EXEC cdlod_viewer)
 add_executable(${EXEC} ${SRCS})
-target_compile_features(${EXEC} PRIVATE cxx_std_14)
+#Forcer le C++14, cxx_std_14 pas disponible sur la version 3.7 de cmake
+target_compile_features(${EXEC} PRIVATE cxx_decltype_auto)
 
 find_package(OpenGL 3.3 REQUIRED)
 #GL sans GLU
@@ -21,5 +22,19 @@ target_include_directories(${EXEC} PRIVATE ${OPENGL_INCLUDE_DIR})
 find_package(glfw3 REQUIRED)
 target_link_libraries(${EXEC} ${GLFW3_LIBRARY})
 
-find_package(glm REQUIRED)
-target_include_directories(${EXEC} PRIVATE ${GLM_INCLUDE_DIR})
+find_package(glm)
+if(${glm_FOUND})
+  target_include_directories(${EXEC} PRIVATE ${GLM_INCLUDE_DIR})
+else()
+  include(ExternalProject)
+  ExternalProject_Add(glm_ext
+    GIT_REPOSITORY      "https://github.com/g-truc/glm.git"
+    GIT_TAG             "0.9.8.5"
+    CONFIGURE_COMMAND   ""
+    BUILD_COMMAND       ""
+    INSTALL_COMMAND     ""
+  )
+  ExternalProject_Get_Property(glm_ext source_dir)
+  set(GlmIncludeDir ${source_dir})
+  target_include_directories(${EXEC} PRIVATE ${GlmIncludeDir})
+endif()
