Quickfix dependency error for tests on cmake 3.7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,10 +143,13 @@ set(EXEC PlanetRenderer)
 add_executable(${EXEC} ${SRCS})
 target_include_directories(${EXEC} PRIVATE PlanetFramework/)
 # Build this before EXEC
-add_dependencies(${EXEC} devil_ext shaders textures fonts)
+set (DEPS devil_ext shaders textures fonts)
+#add_dependencies(${EXEC} devil_ext shaders textures fonts)
 if((NOT ${glm_FOUND}) AND (NOT ${GLM_USE_NATIVE}))
-  add_dependencies(${EXEC} glm_ext)
+  list(APPEND ${DEPS} glm_ext)
+  #add_dependencies(${EXEC} glm_ext)
 endif()
+add_dependencies(${EXEC} ${DEPS})
 
 #DevIL
 target_include_directories(${EXEC} PRIVATE ${devil_include_dir})
@@ -224,7 +227,8 @@ if(BUILD_TESTS)
 
     get_target_property(LIBS ${EXEC} LINK_LIBRARIES)
     get_target_property(INCL ${EXEC} INCLUDE_DIRECTORIES)
-    get_target_property(DEPS ${EXEC} MANUALLY_ADDED_DEPENDENCIES)
+    #get_target_property(DEPS ${EXEC} MANUALLY_ADDED_DEPENDENCIES)
+    add_dependencies(${name}_test ${DEPS})
 
     target_link_libraries(${name}_test ${LIBS})
     target_include_directories(${name}_test PRIVATE
@@ -238,7 +242,6 @@ if(BUILD_TESTS)
       PlanetFramework/PlanetTech
       PlanetFramework/PlanetTech/Types
       )
-    add_dependencies(${name}_test ${DEPS})
 
     add_test(NAME ${name}
       COMMAND ${name}_test)
