Added configuration to clang-tidy
Disable annoying warnings that don't add value to the code
-google-runtime-int
-cppcoreguidelines-pro-type-union-access
-cppcoreguidelines-pro-bounds-pointer-arithmetic
-cppcoreguidelines-pro-bounds-array-to-pointer-decay

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,15 @@ set(ASAN NO CACHE BOOL
   "Enable -fsanitize=address ?")
 set(SANAL NO CACHE BOOL
   "Run static analysers during build ?")
+set(TIDY_CONFIG
+  "-checks=*,\
+-google-runtime-int,\
+-cppcoreguidelines-pro-type-union-access,\
+-cppcoreguidelines-pro-bounds-pointer-arithmetic,\
+-cppcoreguidelines-pro-bounds-array-to-pointer-decay"
+  CACHE STRING
+  "clang-tidy configuration")
+
 set(BUILD_TESTS YES CACHE BOOL
   "Should build test executables ?")
 
@@ -203,7 +212,7 @@ if(SANAL)
     if (EXISTS ${clang_tidy_loc})
       message(STATUS "Found clang-tidy at " ${clang_tidy_loc})
       set_target_properties(${EXEC} PROPERTIES
-        CXX_CLANG_TIDY "${clang_tidy_loc};-checks=*")
+        CXX_CLANG_TIDY "${clang_tidy_loc};${TIDY_CONFIG}")
       get_target_property(test ${EXEC} CXX_CLANG_TIDY)
     else()
       message(STATUS "clang-tidy not found")
